--- a/SmartLibrary/res/layout/dialog_layout.xml
+++ b/SmartLibrary/res/layout/dialog_layout.xml
@@ -16,7 +16,7 @@
             android:paddingLeft="16.0dip"  
             android:paddingRight="16.0dip"  
             android:paddingTop="12.0dip"  
-            android:text="阿萨德"  
+            android:text="找回密码"  
             android:textColor="@color/gray"  
             android:textSize="18.0sp" />  
       
@@ -45,15 +45,15 @@
             <TextView
                 android:layout_width="1px"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="1.4"
                 android:gravity="right"
                 android:paddingLeft="5.0dip"
-                android:text="手机:"
-              android:textColor="@color/gray"
+                android:text="学号:"
+                android:textColor="@color/gray"
                 android:textSize="18.0sp" />
 
             <EditText
-                android:id="@+id/r_phonenum"
+                android:id="@+id/r_studentId"
                 android:layout_width="1px"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10.0dip"
@@ -74,11 +74,11 @@
             <TextView
                 android:layout_width="1px"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="1.4"
                 android:gravity="right"
                 android:paddingLeft="5.0dip"
-                android:text="账号:"
-              android:textColor="@color/gray"
+                android:text="姓名:"
+                android:textColor="@color/gray"
                 android:textSize="18.0sp" />
 
             <EditText
@@ -105,21 +105,20 @@
             <TextView
                 android:layout_width="1px"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="1.4"
                 android:gravity="right"
                 android:paddingLeft="5.0dip"
-                android:text="密码:"
-               android:textColor="@color/gray"
+                android:text="身份证号:"
+                android:textColor="@color/gray"
                 android:textSize="18.0sp" />
 
             <EditText
-                android:id="@+id/r_password"
+                android:id="@+id/r_idcard"
                 android:layout_width="1px"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10.0dip"
                 android:layout_marginRight="15.0dip"
                 android:layout_weight="3"
-                android:inputType="textPassword"
                 android:maxLength="20"
                 android:background="@drawable/shape_line"
                 android:paddingLeft="10.0dip"
