--- a/SmartLibrary/res/layout/dialog_layout.xml
+++ b/SmartLibrary/res/layout/dialog_layout.xml
@@ -1,30 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>  
-  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
-        android:id="@+id/dialoglayout"  
-        android:layout_width="fill_parent"  
-        android:layout_height="wrap_content"  
-        android:background="@@drawable/regis"  
-        android:fadingEdge="horizontal"  
-        android:orientation="vertical" >  
-      
-        <TextView  
-            android:id="@+id/title"  
-            android:layout_width="fill_parent"  
-            android:layout_height="wrap_content"  
-            android:gravity="center_vertical"  
-            android:paddingBottom="12.0dip"  
-            android:paddingLeft="16.0dip"  
-            android:paddingRight="16.0dip"  
-            android:paddingTop="12.0dip"  
-            android:text="找回密码"  
-            android:textColor="@color/gray"  
-            android:textSize="18.0sp" />  
-      
-        <ImageView  
-            android:id="@+id/dialog_title_border"  
-            android:layout_width="fill_parent"  
-            android:layout_height="wrap_content"  
-            android:background="@drawable/lins" />  
+  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+      android:id="@+id/dialoglayout"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:fadingEdge="horizontal"
+      android:orientation="vertical" >
             
       <LinearLayout android:id="@+id/content"  
         android:layout_width="fill_parent"
@@ -49,7 +29,7 @@
                 android:gravity="right"
                 android:paddingLeft="5.0dip"
                 android:text="学号:"
-                android:textColor="@color/gray"
+               android:textColor="@color/gray"
                 android:textSize="18.0sp" />
 
             <EditText
@@ -59,11 +39,12 @@
                 android:layout_marginLeft="10.0dip"
                 android:layout_marginRight="15.0dip"
                 android:layout_weight="3"
+                android:background="@drawable/shape_line"
                 android:maxLength="20"
                 android:paddingLeft="10.0dip"
-                android:background="@drawable/shape_line"
-              android:textColor="@color/gray"
+                android:textColor="@color/gray"
                 android:textSize="16.0sp" />
+
         </LinearLayout>
         <LinearLayout
             android:layout_width="fill_parent"
@@ -78,7 +59,7 @@
                 android:gravity="right"
                 android:paddingLeft="5.0dip"
                 android:text="姓名:"
-                android:textColor="@color/gray"
+               android:textColor="@color/gray"
                 android:textSize="18.0sp" />
 
             <EditText
@@ -119,11 +100,13 @@
                 android:layout_marginLeft="10.0dip"
                 android:layout_marginRight="15.0dip"
                 android:layout_weight="3"
-                android:maxLength="20"
                 android:background="@drawable/shape_line"
+                android:inputType="textPassword"
+                android:maxLength="20"
                 android:paddingLeft="10.0dip"
-               android:textColor="@color/gray"
+                android:textColor="@color/gray"
                 android:textSize="16.0sp" />
+
         </LinearLayout>
         
         
@@ -132,47 +115,6 @@
             android:layout_width="fill_parent"
             android:layout_height="1.0px"
             android:background="@drawable/shape_line" />
-    </LinearLayout>
-
-      
-        <LinearLayout  
-            android:id="@+id/mydialogbuttonlayout"  
-            android:layout_width="fill_parent"  
-            android:layout_height="wrap_content"  
-            android:paddingRight="4.0dip" >  
-      
-            <Button  
-                android:id="@+id/positiveButton"  
-                android:background="@drawable/my_border" 
-                android:layout_width="fill_parent"  
-                android:layout_height="fill_parent"  
-                android:layout_marginBottom="4.0dip"  
-                android:layout_marginLeft="4.0dip"  
-                android:layout_marginTop="4.0dip"  
-                android:layout_weight="1.0"  
-                android:text="阿萨德" />  
-      
-            <Button  
-                android:id="@+id/neutralButton"  
-                 android:background="@drawable/my_border"
-                android:layout_width="fill_parent"  
-                android:layout_height="fill_parent"  
-                android:layout_marginBottom="4.0dip"  
-                android:layout_marginLeft="4.0dip"  
-                android:layout_marginTop="4.0dip"  
-                android:layout_weight="1.0"  
-                android:text="阿萨德" />  
-      
-            <Button  
-                android:id="@+id/negativeButton"  
-                android:background="@drawable/my_border" 
-                android:layout_width="fill_parent"  
-                android:layout_height="fill_parent"  
-                android:layout_marginBottom="4.0dip"  
-                android:layout_marginLeft="4.0dip"  
-                android:layout_marginTop="4.0dip"  
-                android:layout_weight="1.0"  
-                android:text="阿萨德" />  
-        </LinearLayout>  
+    </LinearLayout>  
       
     </LinearLayout>  
