--- a/SmartLibrary/res/layout/main.xml
+++ b/SmartLibrary/res/layout/main.xml
@@ -30,7 +30,7 @@
             android:gravity="center"
             android:paddingTop="15dip"
             android:singleLine="true"
-            android:text="智慧图书馆"
+            android:text="CIRCLE智慧图书馆"
             android:textColor="#3C3C3C"
             android:textSize="22sp" />
         </FrameLayout>
