--- a/SmartLibrary/res/layout/learn.xml
+++ b/SmartLibrary/res/layout/learn.xml
@@ -28,7 +28,7 @@
         android:layout_height="30dp"
         android:layout_margin="10dp"
         android:layout_gravity="center"
-         android:text="3000"
+        android:text="待刷新"
         android:textAppearance="?android:attr/textAppearanceLarge" />
      <TextView
         android:id="@+id/textView3"
@@ -45,14 +45,14 @@
         android:layout_height="30dp"
         android:layout_margin="10dp"
         android:layout_gravity="center"
-         android:text=""
+        android:text="待刷新"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <Button
         android:id="@+id/refresh"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="20dp"
         android:text="刷新" />
 
 </LinearLayout>
