--- a/SmartLibrary/res/layout/login.xml
+++ b/SmartLibrary/res/layout/login.xml
@@ -84,7 +84,7 @@
                 android:hint="密码"
                 android:textSize="18.0sp" 
                  android:gravity="center_vertical"/>
-
+ 
         </LinearLayout>
 
 <!--         <View
@@ -100,17 +100,26 @@
         android:gravity="center"
         android:orientation="horizontal" >
 
-        <TextView
-            android:id="@+id/forget_Psw"
-            android:text="忘记密码?"
+        <CheckBox
+            android:id="@+id/checkBox1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/gray"
-            android:textSize="18.0sp"
+            android:layout_gravity="left"
+            android:layout_weight="0.50"
+            android:text="记住密码"
+            android:textColor="@color/gray" />
+
+        <TextView
+            android:id="@+id/forget_Psw"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:clickable="true"
-            android:focusable="true"  />
+            android:focusable="true"
+            android:text="忘记密码?"
+            android:textColor="@color/gray"
+            android:textSize="18.0sp" />
     </LinearLayout>
-       
+
     <Button
         android:id="@+id/login_btn"
         android:layout_width="fill_parent"
@@ -122,8 +131,6 @@
         android:text="登录"
         android:textColor="#8d8d8d"
         android:textSize="18.0sp" />
-	   
-
 
     <LinearLayout
         android:layout_width="fill_parent"
