--- a/SmartLibrary/res/layout/settings.xml
+++ b/SmartLibrary/res/layout/settings.xml
@@ -7,7 +7,7 @@
 
 <LinearLayout
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="horizontal" >
     <ImageView
@@ -25,14 +25,21 @@
         android:textSize="22sp" />
 
 </LinearLayout>
+
+    <Button
+        android:id="@+id/logout"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
+        android:layout_gravity="bottom"
+        android:gravity="center|bottom"
+        android:text="注销" />
+
     <TextView
         android:id="@+id/about"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-        android:layout_marginBottom="50dip"
+        android:layout_width="fill_parent"
+        android:layout_height="416dp"
         android:gravity="center|bottom"
         android:text="关于我们"
         android:textSize="22sp" />
-
 
 </FrameLayout>
