--- a/ResideMenu/res/layout/residemenu.xml
+++ b/ResideMenu/res/layout/residemenu.xml
@@ -65,23 +65,7 @@
     android:layout_marginTop="90dp"
     android:orientation="horizontal" >
 
-    <ImageView
-        android:id="@+id/head_pic"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/head_pic" />
-
-    <TextView
-          android:id="@+id/UsrID"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:clickable="true"
-          android:focusable="true"
-          android:layout_gravity="center_vertical"
-          android:text="大闸蟹"
-          android:textColor="#ffffff"
-          android:textSize="20sp" />
+    
 </LinearLayout>
     <ImageView
         android:layout_width="fill_parent"
@@ -100,23 +84,20 @@
               android:layout_width="wrap_content"
               android:layout_height="50dp">
 
-              <ImageView
-                  android:layout_width="30dp"
-                  android:layout_height="30dp"
-                  android:layout_gravity="center_vertical"
-                  android:src="@drawable/i_sig" />
+              
           </LinearLayout>
 
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" >
 
-              <EditText
+              <TextView
                   android:id="@+id/signa"
                   android:layout_width="wrap_content"
                   android:layout_height="50dp"
                   android:background="@null"
-                  android:text="起风了,唯有努力生存。"
+                  android:text="书籍是人类进步的阶梯"
+                  android:gravity="center"
                   android:textColor="@color/gray"
                   android:textSize="16sp" />
           </LinearLayout>
