--- a/SmartLibrary/res/layout/learn.xml
+++ b/SmartLibrary/res/layout/learn.xml
@@ -6,13 +6,6 @@
     android:background="#f6f6f6"
     android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="124dp"
-        android:layout_height="124dp"
-        android:layout_gravity="center"
-        android:src="@drawable/login_pic" />
-
     <TextView
         android:id="@+id/textView1"
         android:layout_width="200dp"
@@ -20,6 +13,7 @@
         android:text="自习室空余座位："
         android:layout_margin="30dp"
         android:layout_gravity="left"
+        android:textColor="#000000"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
@@ -29,6 +23,7 @@
         android:layout_margin="10dp"
         android:layout_gravity="center"
         android:text="待刷新"
+        android:textColor="#000000"
         android:textAppearance="?android:attr/textAppearanceLarge" />
      <TextView
         android:id="@+id/textView3"
@@ -37,6 +32,7 @@
         android:text="您的座位号："
         android:layout_margin="30dp"
         android:layout_gravity="left"
+        android:textColor="#000000"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
@@ -46,13 +42,15 @@
         android:layout_margin="10dp"
         android:layout_gravity="center"
         android:text="待刷新"
+        android:textColor="#000000"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <Button
         android:id="@+id/refresh"
-        android:layout_width="100dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="80dp"
         android:text="刷新" />
 
 </LinearLayout>
