--- a/SmartLibrary/res/layout/login.xml
+++ b/SmartLibrary/res/layout/login.xml
@@ -5,19 +5,12 @@
     android:background="#FFFFFF"
     android:orientation="vertical" >
 
-<ImageView android:id="@+id/image" 
-        android:background="@drawable/login_pic" 
-        android:layout_width="100.0dip"
-        android:layout_height="100.0dip" 
-        android:layout_gravity="center"
-        android:layout_marginTop="40.0dip"  />
-
        <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10.0dip"
         android:layout_marginRight="10.0dip"
-        android:layout_marginTop="40.0dip"
+        android:layout_marginTop="140.0dip"
         android:orientation="vertical" >
 
 <!--         <View
@@ -41,7 +34,7 @@
            
     <EditText
         android:id="@+id/l_studentId"
-        android:layout_width="200dip"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@null"
         android:gravity="center_vertical"
@@ -66,24 +59,25 @@
         android:gravity="center_vertical"
         android:background="@drawable/shape_line"
         android:orientation="horizontal" >
-    <ImageView 
-        android:layout_width="wrap_content"  
-        android:layout_height="wrap_content"  
-        android:layout_gravity="left"  
-        android:src="@drawable/psw"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:src="@drawable/psw" />
            
     <EditText
-                android:id="@+id/l_password"
-                android:layout_width="200dip"
-                android:layout_height="wrap_content"
-                android:maxLength="20"
-                android:textColor="@color/gray"
-                android:background="@null"
-                android:textColorHint="@color/gray"
-                android:inputType="textPassword"
-                android:hint="密码"
-                android:textSize="18.0sp" 
-                 android:gravity="center_vertical"/>
+        android:id="@+id/l_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:gravity="center_vertical"
+        android:hint="密码"
+        android:inputType="textPassword"
+        android:maxLength="20"
+        android:textColor="@color/gray"
+        android:textColorHint="@color/gray"
+        android:textSize="18.0sp" />
  
         </LinearLayout>
 
@@ -103,22 +97,26 @@
         <CheckBox
             android:id="@+id/checkBox1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_weight="0.50"
+            android:layout_height="45.0dip"
+            android:layout_marginLeft="40.0dip"
+            android:layout_marginRight="40.0dip"
+            android:layout_marginTop="10.0dip"
+            android:layout_weight="0.37"
             android:text="记住密码"
             android:textColor="@color/gray" />
-
-        <TextView
-            android:id="@+id/forget_Psw"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:focusable="true"
-            android:text="忘记密码?"
-            android:textColor="@color/gray"
-            android:textSize="18.0sp" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/forget_Psw"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40.0dip"
+        android:layout_marginRight="40.0dip"
+        android:layout_marginTop="50.0dip"
+        android:clickable="true"
+        android:focusable="true"
+        android:textColor="@color/gray"
+        android:textSize="18.0sp" />
 
     <Button
         android:id="@+id/login_btn"
