--- a/SmartLibrary/res/layout/settings.xml
+++ b/SmartLibrary/res/layout/settings.xml
@@ -1,45 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
-<LinearLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:orientation="horizontal" >
-    <ImageView
-        android:layout_width="20dip"
-        android:layout_height="27dp"
-        android:layout_marginLeft="10dip"
-        android:background="@drawable/good" />
+    android:layout_height="fill_parent" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="27dp"
-        android:layout_marginLeft="10dip"
+    <Button
+        android:id="@+id/about"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:gravity="center"
-        android:text="赞一个"
-        android:textSize="22sp" />
-
-</LinearLayout>
+        android:text="关于我们" />
 
     <Button
         android:id="@+id/logout"
-        android:layout_width="160dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_gravity="bottom"
-        android:gravity="center|bottom"
+        android:layout_above="@id/about"
+        android:gravity="center"
         android:text="注销" />
 
-    <TextView
-        android:id="@+id/about"
-        android:layout_width="fill_parent"
-        android:layout_height="416dp"
-        android:gravity="center|bottom"
-        android:text="关于我们"
-        android:textSize="22sp" />
-
-</FrameLayout>
+</RelativeLayout>
