--- a/SmartLibrary/res/layout/main.xml
+++ b/SmartLibrary/res/layout/main.xml
@@ -6,33 +6,36 @@
               android:background="#f5f5f5">
 
    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/layout_top">
+       android:id="@+id/layout_top"
+       android:layout_width="fill_parent"
+       android:layout_height="40dp"
+       android:orientation="vertical" >
 
         <FrameLayout
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:background="@color/gray"
+            android:orientation="horizontal" >
+
         <Button
                     android:layout_width="28dp"
                     android:layout_height="20dp"
                     android:background="@drawable/titlebar_menu_selector"
                     android:id="@+id/title_bar_left_menu"
                     android:layout_gravity="left|center_vertical"
-                    android:layout_marginLeft="10dp"/> 
-    
+                    android:layout_marginLeft="10dp"/>
+
         <TextView
             android:id="@+id/titlebar_tv"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:paddingTop="15dip"
+            android:layout_marginTop="0dp"
+            android:gravity="center|center_vertical"
             android:singleLine="true"
             android:text="CIRCLE智慧图书馆"
             android:textColor="#3C3C3C"
-            android:textSize="22sp" />
+            android:textSize="20sp" />
+
         </FrameLayout>
 
 </LinearLayout>
