--- a/SmartLibrary/res/layout/learn.xml
+++ b/SmartLibrary/res/layout/learn.xml
@@ -45,12 +45,24 @@
         android:textColor="#000000"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <Button
+   <!--  <Button
         android:id="@+id/refresh"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="80dp"
-        android:text="刷新" />
+        android:text="刷新" /> -->
+        
+    <Button
+        android:id="@+id/refresh"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40.0dip"
+        android:layout_marginRight="40.0dip"
+        android:layout_marginTop="20.0dip"
+        android:background="@drawable/my_border"
+        android:text="刷新"
+        android:textColor="#6d6d6d"
+        android:textSize="18.0sp" />
 
 </LinearLayout>
