--- a/SmartLibrary/res/layout/index_search.xml
+++ b/SmartLibrary/res/layout/index_search.xml
@@ -37,6 +37,7 @@
               android:layout_weight="0.75"
               android:background="@null"
               android:gravity="center_vertical"
+              android:singleLine="true"
               android:hint="键入书名"
               android:textColor="#6f8ba3"
               android:textSize="20sp" />
